--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
+    "playwright": "^1.48.1",
+    "playwright-extra": "^4.3.6",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "ts-jest": "^29.2.5",
