--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,15 +5,16 @@
       "baseUrl": ".",
       "declaration": true,
       "esModuleInterop": true,
-      "lib": ["es6"],
+      "lib": ["es2015"],
       "module": "commonjs",
       "moduleResolution": "node",
-      "outDir": "dist",
+      "outDir": "./dist",
       "paths": {
         "@app/*": ["./src/*"],
-        "@appTest/*": ["./test/*"],
+        "@dist/*": ["./dist/*"],
+        "@test/*": ["./test/*"],
       },
-      "target": "esnext",
+      "target": "es5",
       "resolveJsonModule": true,
       "skipLibCheck": true,
       "sourceMap": true,
